kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clicknbuy
  labels:
    app: clicknbuy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clicknbuy
  template:
    metadata:
      labels:
        app: clicknbuy
    spec:
      containers:
        - name: clicknbuy
          image: ghcr.io/jenith-datatemplate/java-devsecops-pipeline:sha-da88eb125f1b634f9e4335c63b2a27f2821e023e
          imagePullPolicy: Always
          ports:
            - containerPort: 5454
          resources:
            limits:
              cpu: "1"
              memory: "768Mi"
            requests:
              cpu: "0.5"
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: 5454
            initialDelaySeconds: 90
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 5454
            initialDelaySeconds: 60
            periodSeconds: 5
      imagePullSecrets:
        - name: github-container-registry
