kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clicknbuy
  namespace: clicknbuy-ns
  labels:
    app: clicknbuy
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 5454
      nodePort: 30080
      protocol: TCP
      name: http
  selector:
    app: clicknbuy
