kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clicknbuy-ingress
  namespace: clicknbuy-ns
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: clicknbuy.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clicknbuy
                port:
                  number: 80
